--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "planner-node",
+  "name": "planner-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.2",
-    "fastify": "^4.28.1"
+    "dayjs": "^1.11.11",
+    "fastify": "^4.28.1",
+    "fastify-type-provider-zod": "^2.0.0",
+    "zod": "^3.23.8"
   }
 }
